--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,3 +1,4 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <item name="ic_menu_favorites" type="drawable">@android:drawable/star_big_off</item>
+    <item name="ic_favorite_off" type="drawable">@android:drawable/star_off</item>
+    <item name="ic_favorite_onn" type="drawable">@android:drawable/star_on</item>
 </resources>
