Show coin details. Configure DB, API calls.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/fragment_favorites" />
     <fragment
         android:id="@+id/coinListFragment"
-        android:name="com.pmirkelam.cointracker.ui.coins.CoinFragment"
+        android:name="com.pmirkelam.cointracker.ui.coins.CoinsFragment"
         android:label="CoinListFragment"
-        tools:layout="@layout/fragment_coin_list">
+        tools:layout="@layout/fragment_coins_list">
         <action
             android:id="@+id/action_coinListFragment_to_nav_favorites"
             app:destination="@id/nav_favorites" />
