--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_margin">12dp</dimen>
+    <dimen name="image_margin">32dp</dimen>
+    <dimen name="description_margin">32dp</dimen>
+    <dimen name="parent_margin_properties">80dp</dimen>
+    <dimen name="text_size">16sp</dimen>
 </resources>
