--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,11 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name= "android:textViewStyle" > @style/RobotoTextViewStyle </item>
     </style>
 
     <style name="Theme.CoinTracker.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name= "RobotoTextViewStyle" parent= "android:Widget.TextView" >
+        <item name= "android:fontFamily" > @font/roboto </item>
+        <item name= "android:textSize" > @dimen/text_size </item>
     </style>
 
     <style name="Theme.CoinTracker.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
