--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="ViewModel"
-            type="com.pmirkelam.cointracker.ui.favorites.FavoritesViewModel" />
+            type="com.pmirkelam.cointracker.favorites.ui.FavoritesViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,7 +13,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.favorites.FavoritesFragment">
+        tools:context=".favorites.ui.FavoritesFragment">
 
         <TextView
             android:id="@+id/text_favorites"
