--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/nav_favorites"
-        android:name="com.pmirkelam.cointracker.ui.favorites.FavoritesFragment"
+        android:name="com.pmirkelam.cointracker.favorites.ui.FavoritesFragment"
         android:label="@string/menu_favorites"
         tools:layout="@layout/fragment_favorites" />
     <fragment
         android:id="@+id/coinListFragment"
-        android:name="com.pmirkelam.cointracker.ui.coins.CoinsFragment"
+        android:name="com.pmirkelam.cointracker.coins.ui.CoinsFragment"
         android:label="CoinListFragment"
         tools:layout="@layout/fragment_coins_list">
         <action
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/coinDetailFragment"
-        android:name="com.pmirkelam.cointracker.ui.coindetail.CoinDetailFragment"
+        android:name="com.pmirkelam.cointracker.coindetail.ui.CoinDetailFragment"
         android:label="CoinDetailFragment" />
 
 </navigation>
