--- a/app/src/main/res/layout/list_item_coin.xml
+++ b/app/src/main/res/layout/list_item_coin.xml
@@ -29,16 +29,24 @@
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:paddingTop="24dp"
+                android:paddingBottom="24dp"
                 android:textColor="?android:attr/textColorPrimaryInverse"
                 app:text="@{coin.symbol}"
                 tools:text="BTC" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#C4C4C4" >
+
+            </View>
 
             <TextView
                 android:id="@+id/coin_item_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
+                android:padding="@dimen/text_margin"
                 android:gravity="center"
                 android:text="@{coin.name}"
                 android:textAlignment="center"
