--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,8 @@
     <dimen name="description_margin">32dp</dimen>
     <dimen name="parent_margin_properties">80dp</dimen>
     <dimen name="text_size">16sp</dimen>
+    <dimen name="guideline_height">120dp</dimen>
+    <dimen name="standard_padding">16dp</dimen>
+    <dimen name="auth_button_margin">40dp</dimen>
+    <dimen name="button_margin">32dp</dimen>
 </resources>
