--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_favorites"
-            android:icon="@drawable/favorite_off_icon"
+            android:icon="@drawable/ic_favorite_on"
             android:title="@string/menu_favorites" />
         <item
             android:id="@+id/nav_log_out"
