--- a/app/src/main/res/menu/coin_detail_menu.xml
+++ b/app/src/main/res/menu/coin_detail_menu.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh"
-        android:title="@string/menu_favorite"
+        android:title="@string/menu_refresh"
         app:showAsAction="ifRoom" />
 </menu>
 
