--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,15 @@
         android:id="@+id/nav_favorites"
         android:name="com.pmirkelam.cointracker.favorites.ui.FavoritesFragment"
         android:label="@string/menu_favorites"
-        tools:layout="@layout/fragment_favorites" />
+        tools:layout="@layout/fragment_favorites" >
+        <action
+            android:id="@+id/action_nav_favorites_to_coinDetailFragment"
+            app:destination="@id/coinDetailFragment">
+            <argument
+                android:name="coin_id"
+                app:argType="string" />
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/coinListFragment"
         android:name="com.pmirkelam.cointracker.coins.ui.CoinsFragment"
@@ -24,7 +32,11 @@
             android:id="@+id/action_coinListFragment_to_coinDetailFragment"
             app:destination="@id/coinDetailFragment"
             app:popUpTo="@+id/coinDetailFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true">
+            <argument
+                android:name="coin_id"
+                app:argType="string" />
+        </action>
         <action
             android:id="@+id/action_coinListFragment_to_loginFragment"
             app:destination="@id/loginFragment"
