--- a/app/src/main/res/layout/list_item_coin.xml
+++ b/app/src/main/res/layout/list_item_coin.xml
@@ -11,47 +11,40 @@
 
     <com.google.android.material.card.MaterialCardView
         tools:viewBindingIgnore="true"
-        app:cardElevation="@dimen/cardview_default_elevation"
-        app:cardCornerRadius="4dp"
-        android:layout_margin="8dp"
+        app:cardElevation="@dimen/card_elevation"
+        app:cardCornerRadius="@dimen/card_corner_radius"
+        android:layout_margin="@dimen/list_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="vertical"
-            android:background="@color/purple_700"
             android:layout_width="match_parent"
+            android:padding="@dimen/text_padding_list"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/coin_item_symbol"
-                android:textSize="20sp"
-                android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="24dp"
-                android:paddingBottom="24dp"
-                android:textColor="?android:attr/textColorPrimaryInverse"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textSize="@dimen/text_size_list"
                 app:text="@{coin.symbol}"
                 tools:text="BTC" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#C4C4C4" >
-
+                android:layout_height="@dimen/list_line_height"
+                android:background="@color/light_gray" >
             </View>
 
             <TextView
                 android:id="@+id/coin_item_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/text_margin"
-                android:gravity="center"
+                android:paddingTop="@dimen/text_margin"
                 android:text="@{coin.name}"
-                android:textAlignment="center"
-                android:textColor="?android:attr/textColorSecondaryInverse"
-                android:textSize="@dimen/text_size"
+                android:textAppearance="?attr/textAppearanceHeadline4"
                 tools:text="Bitcoin" />
 
         </LinearLayout>
