--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -8,6 +8,10 @@
         <variable
             name="coin"
             type="com.pmirkelam.cointracker.coindetail.data.CoinDetail" />
+
+        <variable
+            name="viewModel"
+            type="com.pmirkelam.cointracker.coindetail.ui.CoinDetailViewModel" />
     </data>
 
     <FrameLayout
@@ -128,7 +132,7 @@
                     android:layout_marginStart="@dimen/text_margin"
                     android:layout_marginTop="@dimen/text_margin"
                     android:layout_marginEnd="@dimen/text_margin"
-                    android:text='@{coin.interval != null ? (@string/interval + "" + String.valueOf(coin.interval)) : ""}'
+                    android:text='@{viewModel.interval != null ? (@string/interval + "" + String.valueOf(viewModel.interval)) : ""}'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:textAppearance="?attr/textAppearanceHeadline3"
