--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="card_elevation">5dp</dimen>
     <dimen name="list_line_height">1dp</dimen>
     <dimen name="header_image_size">100dp</dimen>
+    <dimen name="dialog_padding">32dp</dimen>
 </resources>
